[package]
name = "v000-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
routerify = "3.0.0"